--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Caveat|Indie+Flower|Kalam|Open+Sans:300,400");
+@import url(../libs/@fortawesome/fontawesome-free/scss/fontawesome.scss);
 a, a:focus, a:hover, a:visited {
   text-decoration: none;
-  color: black;
 }
 
 body {
@@ -11,27 +11,34 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   color: #d4d4d4;
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
 }
 
 nav {
+  display: inline;
+}
+
+#menu {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  overflow: hidden !important;
+  overflow: visible;
   position: fixed !important;
   top: 15px !important;
   left: 20px;
   z-index: 99999;
 }
 
-nav .menu-item {
+#menu .menu-item {
   padding: 10px;
-  font-size: 24px;
   font-family: 'Open Sans';
   font-weight: 200;
 }
 
-nav .menu-item a {
+#menu .menu-item a {
+  font-size: 24px;
   color: #d4d4d4;
 }
 
@@ -219,9 +226,6 @@ section.projects .project:hover .proj-details {
   font-size: 48px;
   margin: 2em auto;
   font-family: 'Kalam', cursive;
-}
-
-.myEmail a {
   color: white;
 }
 
@@ -238,5 +242,84 @@ section.projects .project:hover .proj-details {
 .social i:hover {
   -webkit-box-shadow: 0px 0px 70px -15px #d4d4d4;
           box-shadow: 0px 0px 70px -15px #d4d4d4;
+}
+
+.toggle {
+  z-index: 999;
+  background: #ccc;
+  border-radius: 4em;
+  height: 2.5em;
+  right: 20%;
+  position: absolute;
+  top: 30px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 4em;
+}
+
+@media screen and (max-width: 720px) {
+  .toggle {
+    top: 90px;
+    right: 50vw;
+  }
+}
+
+.ball:before,
+.night:before {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Font Awesome 5 Free";
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.ball {
+  background: #333;
+  -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+          box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  margin-top: 0.25em;
+  -webkit-transform: translateX(25%);
+          transform: translateX(25%);
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
+  border-radius: 50%;
+  height: 2em;
+  width: 2em;
+}
+
+.ball:before {
+  color: #fff;
+  content: "\f186";
+}
+
+.night {
+  background: #fff;
+  -webkit-transform: translateX(75%);
+          transform: translateX(75%);
+}
+
+.night:before {
+  color: #333;
+  content: "\f185";
+}
+
+.black {
+  background-image: url(../img/sunny-day-white-sky-4k-time-lapse_ekyxov3___F0000.png);
+  color: #333 !important;
+}
+
+.black #menu .menu-item a {
+  color: #333;
+}
+
+.black a {
+  color: #333;
 }
 /*# sourceMappingURL=main.css.map */
