--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Caveat|Indie+Flower|Kalam|Open+Sans:300,400');
 @import url(../libs/@fortawesome/fontawesome-free/scss/fontawesome.scss);
+$res: 32px;
 a, a:focus, a:hover, a:visited {
     text-decoration: none;
 }
@@ -27,9 +28,8 @@ nav{
         padding:10px;    
         font-family:'Open Sans';
         font-weight: 200;
-
         & a{
-            font-size: 24px;
+            font-size: 18px;
             color:#d4d4d4;
         }   
     }
@@ -134,6 +134,11 @@ section{
       font-family: 'Kalam', cursive;
       color:white;
   }
+  @media screen and (max-width: 720px){
+    .myEmail{
+        font-size: $res;
+    }
+  }
  .social{
         & i{
             color:white;
@@ -170,7 +175,7 @@ section{
       @media screen and (max-width: 720px){
         .toggle{
             top: 90px;
-            right: 50vw;
+            right: 40vw;
         }
       }
       
