--- a/css/main.css
+++ b/css/main.css
@@ -15,10 +15,6 @@ body {
   transition: all 300ms ease;
 }
 
-nav {
-  display: inline;
-}
-
 #menu {
   width: 100%;
   display: -webkit-box;
@@ -26,8 +22,9 @@ nav {
   display: flex;
   overflow: visible;
   position: fixed !important;
-  top: 15px !important;
-  left: 20px;
+  top: 20px !important;
+  left: 50px;
+  right: 50px;
   z-index: 99999;
 }
 
@@ -40,6 +37,24 @@ nav {
 #menu .menu-item a {
   font-size: 18px;
   color: #d4d4d4;
+}
+
+@media screen and (max-width: 720px) {
+  #menu {
+    left: 25px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  #menu {
+    left: 25px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  #menu {
+    left: 5px;
+  }
 }
 
 .arrow {
@@ -255,7 +270,7 @@ section.projects .project:hover .proj-details {
   background: #ccc;
   border-radius: 4em;
   height: 2.5em;
-  right: 20%;
+  right: 0;
   position: absolute;
   top: 30px;
   -webkit-transform: translate(-50%, -50%);
@@ -267,6 +282,13 @@ section.projects .project:hover .proj-details {
   .toggle {
     top: 90px;
     right: 40vw;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .toggle {
+    top: 60px;
+    right: 32vw;
   }
 }
 
