--- a/css/main.scss
+++ b/css/main.scss
@@ -103,7 +103,7 @@ section{
         & .project{
             margin:15px 0 ;
             & .proj-preview{
-                height: 210px;
+                height: auto;
                 width:100%;
                 object-fit:fill; 
              }
