--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@ a, a:focus, a:hover, a:visited {
     text-decoration: none;
 }
 body{
-    background-image: url(../img/sky.png);
+    background-image: url(../img/sky.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -251,7 +251,7 @@ section{
         }
       }
       .black {
-        background-image:url(../img/sunny-day-white-sky-4k-time-lapse_ekyxov3___F0000.png);
+        background-image:url(../img/sky_day.jpg);
         color:#333 !important;
         & header{
           & #menu{ 
