--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Caveat|Indie+Flower|Kalam|Open+Sans:300,400');
 @import url(../libs/@fortawesome/fontawesome-free/scss/fontawesome.scss);
-$res: 32px;
+$res: 2.000em;
 a, a:focus, a:hover, a:visited {
     text-decoration: none;
 }
@@ -26,7 +26,7 @@ body{
         font-family:'Open Sans';
         font-weight: 200;
         & a{
-            font-size: 18px;
+            font-size: 1.125em;
             color:#d4d4d4;
         }   
     }
@@ -100,11 +100,11 @@ section{
     }
     &.projects{      
         h5{
-          font-size:22px;
+          font-size:1.375em;
           font-family: 'Kalam', cursive;
         }
         h6{
-          font-size:14px;
+          font-size:0.875em;
           font-family: 'Open Sans';
         }
         & .project{
@@ -158,7 +158,7 @@ section{
     }
   }
   .myEmail{
-      font-size:48px;
+      font-size:3.000em;
       margin: 2em auto;
       font-family: 'Kalam', cursive;
       color:white;
@@ -173,7 +173,7 @@ section{
             color:white;
             padding: 30px;
             border-radius: 50%;
-            font-size: 55px;
+            font-size: 3.438em;
             background-color:rgba($color: #000000, $alpha: 0.1);
             transition: 700ms all cubic-bezier(0.55, 0.085, 0.68, 0.53) ;
         &:hover{
