--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,11 @@ a, a:focus, a:hover, a:visited {
   text-decoration: none;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-image: url(../img/sky.jpg);
   background-position: center center;
@@ -147,9 +152,30 @@ body {
 }
 
 section {
+  width: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  box-sizing: border-box;
   text-align: center;
+}
+
+section:nth-child(1) {
+  height: 100vh;
+  padding-top: 20%;
+}
+
+section:nth-child(2) {
+  padding-top: 10%;
+  height: 100vh;
+}
+
+section:nth-child(3) {
+  height: 100vh;
+}
+
+section:nth-child(4) {
+  padding-top: 20%;
+  height: 100vh;
 }
 
 section h1 {
@@ -205,28 +231,9 @@ section.projects .project .proj-preview {
      object-fit: fill;
 }
 
-section.projects .project .proj-details {
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding-top: 20%;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  -webkit-transition: all 0.7s ease-in-out;
-  transition: all 0.7s ease-in-out;
-}
-
 section.projects .project .proj-details .icon-proj {
   color: white;
-  margin: 0 25px;
-}
-
-section.projects .project:hover .proj-details {
-  opacity: 1;
-  -webkit-transition: all 0.6s ease-in-out;
-  transition: all 0.6s ease-in-out;
+  margin: 10px;
 }
 
 .prog-skill {
@@ -368,6 +375,18 @@ header.container {
   color: #333 !important;
 }
 
+.black h5 {
+  color: #333 !important;
+}
+
+.black span {
+  color: #333 !important;
+}
+
+.black i {
+  color: #333 !important;
+}
+
 @media screen and (max-width: 420px) {
   .black header #menu {
     background-color: rgba(255, 255, 255, 0.5);
@@ -380,5 +399,22 @@ header.container {
 
 .black header #menu a {
   color: #333;
+}
+
+[data-scroll] {
+  -webkit-transition: all 2s;
+  transition: all 2s;
+}
+
+[data-scroll="in"] {
+  opacity: 1;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+[data-scroll="out"] {
+  opacity: 0;
+  -webkit-transform: translateX(-100px);
+          transform: translateX(-100px);
 }
 /*# sourceMappingURL=main.css.map */
