--- a/css/main.scss
+++ b/css/main.scss
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Caveat|Indie+Flower|Kalam|Open+Sans:300,400');
 @import url(../libs/@fortawesome/fontawesome-free/scss/fontawesome.scss);
 $res: 2.000em;
+
 a, a:focus, a:hover, a:visited {
     text-decoration: none;
+}
+html,body{
+  margin:0;
+  padding:0;
 }
 body{
     background-image: url(../img/sky.jpg);
@@ -76,6 +81,27 @@ body{
 }
 
 section{
+    width:100%;
+    box-sizing: border-box;
+    &:nth-child(1){
+      height:100vh;
+      padding-top:20%;
+      // background-color:red;
+    }
+    &:nth-child(2){
+      padding-top:10%;
+      height:100vh;
+      // background-color:gold;  
+    }
+    &:nth-child(3){
+      height:100vh;
+      // background-color:green;
+    }
+    &:nth-child(4){
+      padding-top:20%;
+      height:100vh;
+      
+    }
     box-sizing: border-box;
     text-align: center;
     & h1{
@@ -120,25 +146,12 @@ section{
                 object-fit:fill; 
              }
             & .proj-details{
-                opacity: 0;
-                position: absolute;
-                top:0;
-                right:0;
-                padding-top:20%;
-                width: 100%;
-                height: 100%;
-                background-color:rgba($color: #000000, $alpha: 0.8);
-                transition: all 0.7s ease-in-out;
-
                 & .icon-proj{
                     color:white;
-                    margin: 0 25px;
+                    margin: 10px;
                 }
             }
-            &:hover .proj-details{
-                opacity: 1;
-                transition: all 0.6s ease-in-out;
-            }
+
 
       }
     }
@@ -254,6 +267,15 @@ section{
       .black {
         background-image:url(../img/sky_day.jpg);
         color:#333 !important;
+        & h5{
+          color:#333 !important;
+        }
+        & span {
+          color:#333 !important;
+        }
+        & i{
+          color:#333 !important;
+        }
         & header{
           & #menu{ 
             @media screen and (max-width: 420px){
@@ -268,6 +290,18 @@ section{
           }
         }
       }
+      [data-scroll]{
+        transition: all 2s;
+      }
+      [data-scroll="in"]{
+         opacity:1;
+         transform: translateX(0);
+      }
+      [data-scroll="out"]{
+        opacity:0;
+        transform: translateX(-100px);
+      }
+
 
   
 
