--- a/css/main.css
+++ b/css/main.css
@@ -155,27 +155,30 @@ section {
   width: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  box-sizing: border-box;
   text-align: center;
+  height: 100vh;
 }
 
 section:nth-child(1) {
-  height: 100vh;
   padding-top: 20%;
 }
 
 section:nth-child(2) {
   padding-top: 10%;
-  height: 100vh;
 }
 
 section:nth-child(3) {
-  height: 100vh;
+  padding-top: 10%;
 }
 
 section:nth-child(4) {
   padding-top: 20%;
-  height: 100vh;
+}
+
+@media screen and (max-width: 765px) {
+  section {
+    height: 100%;
+  }
 }
 
 section h1 {
@@ -216,12 +219,38 @@ section.projects h6 {
 }
 
 section.projects .project {
-  margin: 15px 0;
+  -webkit-box-sizing: border-box !important;
+          box-sizing: border-box !important;
+  margin: 5px;
 }
 
-section.projects .project video {
-  width: 100%;
-  height: auto;
+section.projects .project:nth-child(1) {
+  background: url(../img/projects_coverimage/boxGame.jpg) no-repeat center center;
+  background-size: cover;
+  padding: 5%;
+}
+
+section.projects .project:nth-child(2) {
+  background: url(../img/projects_coverimage/chat.jpg) no-repeat center center;
+  background-size: cover;
+  padding: 5%;
+}
+
+section.projects .project:nth-child(3) {
+  background: url(../img/projects_coverimage/landingPage.jpg) no-repeat center center;
+  background-size: cover;
+  padding: 5%;
+}
+
+section.projects .project:nth-child(4) {
+  background: url(../img/projects_coverimage/TodoApp.jpg) no-repeat center center;
+  background-size: cover;
+  padding: 5%;
+}
+
+section.projects .project:nth-child(5) {
+  background: url(../img/projects_coverimage/tributePage.jpg) no-repeat center center;
+  padding: 5%;
 }
 
 section.projects .project .proj-preview {
@@ -229,6 +258,11 @@ section.projects .project .proj-preview {
   width: 100%;
   -o-object-fit: fill;
      object-fit: fill;
+}
+
+section.projects .project .proj-details {
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 5%;
 }
 
 section.projects .project .proj-details .icon-proj {
@@ -376,15 +410,7 @@ header.container {
 }
 
 .black h5 {
-  color: #333 !important;
-}
-
-.black span {
-  color: #333 !important;
-}
-
-.black i {
-  color: #333 !important;
+  color: #fff !important;
 }
 
 @media screen and (max-width: 420px) {
