--- a/css/main.scss
+++ b/css/main.scss
@@ -83,27 +83,25 @@ body{
 section{
     width:100%;
     box-sizing: border-box;
+    text-align: center;
+    height: 100vh;
     &:nth-child(1){
-      height:100vh;
       padding-top:20%;
-      // background-color:red;
     }
     &:nth-child(2){
-      padding-top:10%;
-      height:100vh;
-      // background-color:gold;  
+      padding-top:10%; 
     }
     &:nth-child(3){
-      height:100vh;
-      // background-color:green;
+      padding-top:10%; 
     }
     &:nth-child(4){
       padding-top:20%;
-      height:100vh;
-      
     }
-    box-sizing: border-box;
-    text-align: center;
+    @media screen and (max-width: 765px) {
+      height: 100%;
+     }
+   
+     
     & h1{
         font-family:'Open Sans';
         font-weight: 200;
@@ -135,10 +133,31 @@ section{
           font-family: 'Open Sans';
         }
         & .project{
-            margin:15px 0;
-            & video{
-                width: 100%;
-                height: auto;
+            box-sizing: border-box!important;
+            margin:5px;
+            &:nth-child(1){
+              background:url(../img/projects_coverimage/boxGame.jpg) no-repeat  center center;
+              background-size: cover;
+              padding:5%;
+            }
+            &:nth-child(2){
+              background:url(../img/projects_coverimage/chat.jpg) no-repeat center center;
+              background-size: cover;
+              padding:5%;
+            }
+            &:nth-child(3){
+              background:url(../img/projects_coverimage/landingPage.jpg) no-repeat center center;
+              background-size: cover;
+              padding:5%;
+            }
+            &:nth-child(4){
+              background:url(../img/projects_coverimage/TodoApp.jpg) no-repeat center center;
+              background-size: cover;
+              padding:5%;
+            }
+            &:nth-child(5){
+              background:url(../img/projects_coverimage/tributePage.jpg) no-repeat center center;
+              padding:5%;
             }
             & .proj-preview{
                 height: auto;
@@ -146,6 +165,8 @@ section{
                 object-fit:fill; 
              }
             & .proj-details{
+                background-color: rgba($color: #000000, $alpha: 0.8);
+                padding:5%;
                 & .icon-proj{
                     color:white;
                     margin: 10px;
@@ -268,13 +289,13 @@ section{
         background-image:url(../img/sky_day.jpg);
         color:#333 !important;
         & h5{
-          color:#333 !important;
+          color:#fff !important;
         }
         & span {
-          color:#333 !important;
+          // color:#333 !important;
         }
         & i{
-          color:#333 !important;
+          // color:#333 !important;
         }
         & header{
           & #menu{ 
