--- a/css/main.scss
+++ b/css/main.scss
@@ -179,8 +179,16 @@ section{
     }
 }
 .prog-skill{
-    margin-bottom:-1rem;
+    text-align: left;
+    margin:5px;
+    font-size:1.5rem;
+  & span > i {
+
+    padding:15px;
+    font-size:2.5rem;
+  }
 }
+
 
 @keyframes animate {
     0% {
